@@ -23,7 +23,13 @@
 import gtirb
 import gtirb_rewriting
 import pytest
-from gtirb_test_helpers import add_proxy_block, add_symbol, create_test_module
+from gtirb_test_helpers import (
+    add_data_block,
+    add_proxy_block,
+    add_symbol,
+    add_text_section,
+    create_test_module,
+)
 
 
 def test_return_edges():
@@ -467,3 +473,64 @@ def test_undef_symbols():
     assert result.symbols[0].name == "does_not_exist"
     assert isinstance(result.symbols[0].referent, gtirb.ProxyBlock)
     assert result.symbols[0].referent in result.proxies
+
+
+def test_indirect_jumps():
+    ir, m = create_test_module(
+        gtirb.Module.FileFormat.ELF, gtirb.Module.ISA.X64,
+    )
+
+    assembler = gtirb_rewriting.Assembler(m)
+    assembler.assemble("jmp [rax]", gtirb_rewriting.X86Syntax.INTEL)
+    result = assembler.finalize()
+
+    (proxy,) = result.proxies
+    assert set(result.cfg) == {
+        gtirb.Edge(
+            result.blocks[0],
+            proxy,
+            gtirb.Edge.Label(gtirb.Edge.Type.Branch, direct=False),
+        )
+    }
+    assert result.symbolic_expressions == {}
+
+
+def test_indirect_calls():
+    ir, m = create_test_module(
+        gtirb.Module.FileFormat.ELF, gtirb.Module.ISA.X64,
+    )
+
+    assembler = gtirb_rewriting.Assembler(m)
+    assembler.assemble("call [rax]", gtirb_rewriting.X86Syntax.INTEL)
+    result = assembler.finalize()
+
+    (proxy,) = result.proxies
+    assert set(result.cfg) == {
+        gtirb.Edge(
+            result.blocks[0],
+            proxy,
+            gtirb.Edge.Label(gtirb.Edge.Type.Call, direct=False),
+        ),
+        gtirb.Edge(
+            result.blocks[0],
+            result.blocks[1],
+            gtirb.Edge.Label(gtirb.Edge.Type.Fallthrough),
+        ),
+    }
+    assert result.symbolic_expressions == {}
+
+
+def test_assembler_errors():
+    ir, m = create_test_module(
+        gtirb.Module.FileFormat.ELF, gtirb.Module.ISA.X64,
+    )
+    _, bi = add_text_section(m)
+    add_symbol(m, "blah", add_proxy_block(m))
+    add_symbol(m, "data", add_data_block(bi, b"\xFF"))
+
+    assembler = gtirb_rewriting.Assembler(m)
+    with pytest.raises(gtirb_rewriting.UnsupportedAssemblyError):
+        assembler.assemble("call blah+1", gtirb_rewriting.X86Syntax.INTEL)
+
+    with pytest.raises(gtirb_rewriting.UnsupportedAssemblyError):
+        assembler.assemble("call data", gtirb_rewriting.X86Syntax.INTEL)
